--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AgenciaConnection": "Server=DESKTOP-V0LKR9R;Database=Agencia;User Id=sa;Password=hola1234;Trust Server Certificate=true;"
+  }
 }
